--- a/src/Enexure.Sql.Dynamic.Providers.TransactSql/Enexure.Sql.Dynamic.Providers.TransactSql.nuspec
+++ b/src/Enexure.Sql.Dynamic.Providers.TransactSql/Enexure.Sql.Dynamic.Providers.TransactSql.nuspec
@@ -5,9 +5,9 @@
     <version>$version$</version>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://github.com/Lavinski/Enexure.Sql.Dynamic.Providers.TransactSq/blob/master/License.md</licenseUrl>
-    <projectUrl>https://github.com/Lavinski/Enexure.Sql.Dynamic.Providers.TransactSq/</projectUrl>
-    <iconUrl>https://github.com/Lavinski/Enexure.Sql.Dynamic.Providers.TransactSq/blob/master/Logo.png</iconUrl>
+    <licenseUrl>https://github.com/Enexure/Enexure.Sql.Dynamic.Providers.TransactSql/blob/master/License.md</licenseUrl>
+    <projectUrl>https://github.com/Enexure/Enexure.Sql.Dynamic.Providers.TransactSql/</projectUrl>
+    <iconUrl>https://github.com/Enexure/Enexure.Sql.Dynamic.Providers.TransactSql/blob/master/Logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <tags>Immutable Dynamic SQL SQL-Generator</tags>
