--- a/src/Enexure.Sql.Dynamic.Providers.TransactSql.Tests/Enexure.Sql.Dynamic.Providers.TransactSql.Tests.csproj
+++ b/src/Enexure.Sql.Dynamic.Providers.TransactSql.Tests/Enexure.Sql.Dynamic.Providers.TransactSql.Tests.csproj
@@ -39,10 +39,10 @@
   <ItemGroup>
     <Reference Include="Enexure.Sql.Dynamic, Version=0.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Enexure.Sql.Dynamic.0.1.2\lib\net45\Enexure.Sql.Dynamic.dll</HintPath>
+      <HintPath>..\..\packages\Enexure.Sql.Dynamic.0.1.2\lib\net45\Enexure.Sql.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="FluentAssertions">
-      <HintPath>..\packages\FluentAssertions.2.2.0.0\lib\net45\FluentAssertions.dll</HintPath>
+      <HintPath>..\..\packages\FluentAssertions.2.2.0.0\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
