--- a/src/Enexure.Sql.Dynamic.Providers.TransactSql/Enexure.Sql.Dynamic.Providers.TransactSql.csproj
+++ b/src/Enexure.Sql.Dynamic.Providers.TransactSql/Enexure.Sql.Dynamic.Providers.TransactSql.csproj
@@ -37,13 +37,14 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Enexure.Sql.Dynamic, Version=1.0.0.6, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Enexure.Sql.Dynamic, Version=0.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Enexure.Sql.Dynamic.1.0.0.6\lib\net45\Enexure.Sql.Dynamic.dll</HintPath>
+      <HintPath>..\..\packages\Enexure.Sql.Dynamic.1.0.0\lib\net45\Enexure.Sql.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\..\packages\Microsoft.Bcl.Immutable.1.0.30\lib\portable-net45+win8+wp8\System.Collections.Immutable.dll</HintPath>
+    <Reference Include="System.Collections.Immutable, Version=1.0.34.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +56,7 @@
     <Compile Include="Provider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Enexure.Sql.Dynamic.Providers.TransactSql.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
